crates/wac-parser/tests/resolution/fail/invalid-world-interface-export.wac
package test:comp;

type x = u32;

world w {
    export x;
}